Use cristin api and create graph network

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+# Python defaults
+__pycache__/
+*.py[cod]
+*.pyd
+*.pyo
+*.pyz
+*.pyzw
+*.egg-info/
+dist/
+build/
+*.egg
+*.spec
+.ipynb_checkpoints
+.venv/
 venv/
-*_cache/
+ENV/
+
+# R defaults
+.Rhistory
+.RData
+.Ruserdata
+.Rproj.user/
+*.Rproj
+*.tar.gz
+.Rcheck/
+.Rapp.history
+.RDataTmp
+.rs.*
+.viminfo
